# bazel-runfiles-demo

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/workflows/: build.yml
src/: BUILD.bazel  sources.txt
tools/: BUILD.bazel  archiver.py
